# lorelm

./: .env.example  .gitignore  Architecture.md  CLAUDE.md  README.md  alembic.ini  build.sh  docker-compose.yml  pyproject.toml  test.py
alembic/: env.py
alembic/versions/: 8f2f96f6311b_.py  bd7891873488_.py
backend/: __init__.py
backend/api/: __init__.py
backend/api/v1/: __init__.py  character.py  conversation.py
backend/components/: __init__.py
backend/components/chunk/: __init__.py  _base.py  naive.py
backend/crud/: __init__.py  base.py  character.py  conversation.py
backend/crud/admin/: user.py
backend/dependencies/: __init__.py  admin.py  database.py  oss.py  query.py  utils.py
backend/exceptions/: __init__.py  common.py  handler.py
backend/middlewares/: __init__.py
backend/models/: __init__.py  admin.py  base.py  character.py  conversation.py
backend/prompts/: __init__.py  info.md  lorebook.md  policy.md  task.md
backend/response/: __init__.py  common.py
backend/schemas/: __init__.py  admin.py  base.py  character.py  conversation.py  profile.py
backend/schemas/components/: __init__.py  chunk.py
backend/utils/: __init__.py  common.py  token_predict.py
backend/utils/nlp/: __init__.py  query.py  synonym.py  tokenizer.py
backend/utils/oss/: __init__.py  _base.py  minio.py
backend/utils/vector/: __init__.py  _base.py  _elastic.py
frontend/: .env.development  index.html  loading.html  package.json  tsconfig.app.json  tsconfig.node.json  vite.config.ts
frontend/src/: App.vue  env.d.ts  main.ts  style.css
(+47 files in other folders)
